[gd_scene load_steps=22 format=3 uid="uid://bgvvhpnbd3nqe"]

[ext_resource type="PackedScene" uid="uid://d1qs8nf0s0y85" path="res://objects/general_ui/ui_panel/ui_panel.tscn" id="1_bwryn"]
[ext_resource type="FontFile" uid="uid://815gwlftl5ik" path="res://fonts/impress-bt.ttf" id="2_0hji2"]
[ext_resource type="Script" uid="uid://cupi2vaorp3f5" path="res://objects/general_ui/settings_menu/settings_menu.gd" id="2_2jdde"]
[ext_resource type="FontFile" uid="uid://cup2yr5w7or1l" path="res://fonts/Minnie.TTF" id="3_7uwv2"]
[ext_resource type="PackedScene" uid="uid://b0d1er4oqiqcn" path="res://objects/general_ui/general_button/general_button.tscn" id="4_aygce"]
[ext_resource type="Shader" uid="uid://ryrnfqn0ixe5" path="res://scenes/title_screen/hue_shift.gdshader" id="5_07ilt"]
[ext_resource type="Texture2D" uid="uid://ddcktpjy3gdew" path="res://ui_assets/misc/uiAccessoryDelete_up.png" id="5_p4xtr"]
[ext_resource type="Texture2D" uid="uid://b7ri5sq021cvo" path="res://ui_assets/misc/uiAccessoryDelete_down.png" id="6_bs0ac"]
[ext_resource type="Texture2D" uid="uid://dn8vndd37lqom" path="res://ui_assets/misc/uiAccessoryDelete_rollover.png" id="7_nxqst"]
[ext_resource type="Theme" uid="uid://dhqxwi6busihb" path="res://objects/general_ui/settings_menu/slider_theme.tres" id="9_dnno6"]

[sub_resource type="LabelSettings" id="LabelSettings_ddgja"]
font = ExtResource("3_7uwv2")
font_size = 42
font_color = Color(0.941176, 0.572549, 0.184314, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0uktb"]
font = ExtResource("3_7uwv2")
font_size = 36
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_n41hl"]
font = ExtResource("2_0hji2")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vnbpc"]
shader = ExtResource("5_07ilt")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_xxrhd"]
font = ExtResource("2_0hji2")
font_size = 24

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mtv11"]
shader = ExtResource("5_07ilt")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8twx"]
shader = ExtResource("5_07ilt")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_csi57"]
shader = ExtResource("5_07ilt")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xvvqb"]
shader = ExtResource("5_07ilt")
shader_parameter/Shift_Hue = 0.585
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_01sws"]
shader = ExtResource("5_07ilt")
shader_parameter/Shift_Hue = 0.065
shader_parameter/alpha = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_pmgey"]
font = ExtResource("2_0hji2")
font_size = 24

[node name="SettingsMenu" instance=ExtResource("1_bwryn")]
offset_left = -266.0
offset_top = -284.0
offset_right = 266.0
offset_bottom = 284.0
script = ExtResource("2_2jdde")
title = "Settings"
body = ""

[node name="Panel" parent="." index="0"]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
pivot_offset = Vector2(266, 284)

[node name="Title" parent="Panel" index="0"]
offset_top = 48.0
offset_bottom = 92.5
text = "Settings"
label_settings = SubResource("LabelSettings_ddgja")

[node name="Body" parent="Panel" index="1"]
text = ""

[node name="CancelButton" parent="Panel" index="2"]
hover_db_offset = 6.0
press_db_offset = 0.0

[node name="SettingScroller" type="ScrollContainer" parent="Panel" index="3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -184.5
offset_right = 222.0
offset_bottom = 184.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_dnno6")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/SettingScroller" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="SettingContainer" type="VBoxContainer" parent="Panel/SettingScroller/MarginContainer" index="0"]
layout_mode = 2

[node name="HSizer" type="Control" parent="Panel/SettingScroller/MarginContainer/SettingContainer" index="0"]
layout_mode = 2

[node name="VideoSettings" type="VBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer" index="1"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings" index="0"]
layout_mode = 2
text = "Video"
label_settings = SubResource("LabelSettings_0uktb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/Fullscreen" index="0"]
layout_mode = 2
text = "Fullscreen:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="FullscreenButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/Fullscreen" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_vnbpc")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "On"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/Fullscreen/FullscreenButton" index="0"]
text = "On"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="FPSLimit" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/FPSLimit" index="0"]
layout_mode = 2
text = "FPS Limit:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="FPSButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/FPSLimit" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mtv11")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "60"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/FPSLimit/FPSButton" index="0"]
text = "60"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="AntiAliasing" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/AntiAliasing" index="0"]
layout_mode = 2
text = "Anti-Aliasing:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="AliasButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/AntiAliasing" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_vnbpc")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "On"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/AntiAliasing/AliasButton" index="0"]
text = "On"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="AudioSettings" type="VBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer" index="2"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings" index="0"]
layout_mode = 2
text = "Audio"
label_settings = SubResource("LabelSettings_0uktb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/MasterVolume" index="0"]
layout_mode = 2
text = "Master Volume:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="MasterSlider" type="HSlider" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/MasterVolume" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("9_dnno6")
max_value = 1.0
step = 0.01
scrollable = false

[node name="MusicVolume" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/MusicVolume" index="0"]
layout_mode = 2
text = "Music Volume:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="MusicSlider" type="HSlider" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/MusicVolume" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("9_dnno6")
max_value = 1.0
step = 0.01
scrollable = false

[node name="SFXVolume" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/SFXVolume" index="0"]
layout_mode = 2
text = "SFX Volume:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="SFXSlider" type="HSlider" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/SFXVolume" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("9_dnno6")
max_value = 1.0
step = 0.01
scrollable = false

[node name="AmbientSound" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings" index="4"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/AmbientSound" index="0"]
layout_mode = 2
text = "Ambient SFX:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="AmbientButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/AmbientSound" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_vnbpc")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "On"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/AmbientSound/AmbientButton" index="0"]
text = "On"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="GameplaySettings" type="VBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer" index="3"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="0"]
layout_mode = 2
text = "Gameplay"
label_settings = SubResource("LabelSettings_0uktb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ImStuck" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="1"]
unique_name_in_owner = true
layout_mode = 2

[node name="StuckButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ImStuck" index="0" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "I'M STUCK!"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ImStuck/StuckButton" index="0"]
text = "I'M STUCK!"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="BattleSpeed" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/BattleSpeed" index="0"]
layout_mode = 2
text = "Battle Speed:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="SpeedButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/BattleSpeed" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mtv11")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "1.0x"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/BattleSpeed/SpeedButton" index="0"]
text = "1.0x"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="ControlStyle" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ControlStyle" index="0"]
layout_mode = 2
text = "Control Style:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="ControlStyleButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ControlStyle" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_r8twx")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "On"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ControlStyle/ControlStyleButton" index="0"]
text = "On"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="CameraSensitivity" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="4"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/CameraSensitivity" index="0"]
layout_mode = 2
text = "Cam Sensitivity:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="CamSensSlider" type="HSlider" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/CameraSensitivity" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme = ExtResource("9_dnno6")
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0
scrollable = false

[node name="AutoSprint" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="5"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/AutoSprint" index="0"]
layout_mode = 2
text = "Auto-sprint:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="AutoSprintButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/AutoSprint" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_csi57")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "On"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/AutoSprint/AutoSprintButton" index="0"]
text = "On"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="ItemReactions" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="6"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ItemReactions" index="0"]
layout_mode = 2
text = "Item Reactions:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="ReactionButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ItemReactions" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_xvvqb")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Default"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ItemReactions/ReactionButton" index="0"]
text = "Default"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="ShowTimer" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="7"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ShowTimer" index="0"]
layout_mode = 2
text = "Show Timer:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="TimerButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ShowTimer" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_xvvqb")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Off"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ShowTimer/TimerButton" index="0"]
text = "Off"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="IntroSkip" type="HBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings" index="8"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/IntroSkip" index="0"]
layout_mode = 2
text = "Skip Intro:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="IntroSkipButton" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/IntroSkip" index="1" instance=ExtResource("4_aygce")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_xvvqb")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Off"

[node name="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/IntroSkip/IntroSkipButton" index="0"]
text = "Off"
label_settings = SubResource("LabelSettings_xxrhd")

[node name="ControlSettings" type="VBoxContainer" parent="Panel/SettingScroller/MarginContainer/SettingContainer" index="4"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="Panel/SettingScroller/MarginContainer/SettingContainer/ControlSettings" index="0"]
layout_mode = 2
text = "Controls"
label_settings = SubResource("LabelSettings_0uktb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveButton" parent="Panel" index="4" instance=ExtResource("4_aygce")]
material = SubResource("ShaderMaterial_01sws")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.5
offset_top = -96.0
offset_right = 77.5
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "Save"

[node name="Label" parent="Panel/SaveButton" index="0"]
text = "Save"
label_settings = SubResource("LabelSettings_pmgey")

[node name="ControlTemplate" type="HBoxContainer" parent="." index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 0

[node name="Label" type="Label" parent="ControlTemplate" index="0"]
layout_mode = 2
text = "Forward:"
label_settings = SubResource("LabelSettings_n41hl")

[node name="GeneralButton" parent="ControlTemplate" index="1" instance=ExtResource("4_aygce")]
material = SubResource("ShaderMaterial_vnbpc")
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("5_p4xtr")
texture_pressed = ExtResource("6_bs0ac")
texture_hover = ExtResource("7_nxqst")
texture_disabled = ExtResource("6_bs0ac")
hover_db_offset = 6.0
press_db_offset = 0.0
text = "W"

[node name="Label" parent="ControlTemplate/GeneralButton" index="0"]
text = "W"
label_settings = SubResource("LabelSettings_xxrhd")

[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/Fullscreen/FullscreenButton" to="." method="toggle_full_screen"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/FPSLimit/FPSButton" to="." method="change_fps"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/AntiAliasing/AliasButton" to="." method="toggle_anti_aliasing"]
[connection signal="value_changed" from="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/MasterVolume/MasterSlider" to="." method="set_bus_volume" binds= ["Master"]]
[connection signal="value_changed" from="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/MusicVolume/MusicSlider" to="." method="set_bus_volume" binds= ["Music"]]
[connection signal="value_changed" from="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/SFXVolume/SFXSlider" to="." method="set_bus_volume" binds= ["SFX"]]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/AmbientSound/AmbientButton" to="." method="toggle_ambient_sfx"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ImStuck/StuckButton" to="." method="cry_for_help"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/BattleSpeed/SpeedButton" to="." method="change_speed"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ControlStyle/ControlStyleButton" to="." method="toggle_control_style"]
[connection signal="value_changed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/CameraSensitivity/CamSensSlider" to="." method="set_cam_sens"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/AutoSprint/AutoSprintButton" to="." method="toggle_auto_sprint"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ItemReactions/ReactionButton" to="." method="toggle_item_reactions"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ShowTimer/TimerButton" to="." method="toggle_timer"]
[connection signal="pressed" from="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/IntroSkip/IntroSkipButton" to="." method="toggle_intro_skip"]
[connection signal="pressed" from="Panel/SaveButton" to="." method="close" binds= [true]]

[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/Fullscreen/FullscreenButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/FPSLimit/FPSButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/VideoSettings/AntiAliasing/AliasButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/AudioSettings/AmbientSound/AmbientButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ImStuck/StuckButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/BattleSpeed/SpeedButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ControlStyle/ControlStyleButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/AutoSprint/AutoSprintButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ItemReactions/ReactionButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/ShowTimer/TimerButton"]
[editable path="Panel/SettingScroller/MarginContainer/SettingContainer/GameplaySettings/IntroSkip/IntroSkipButton"]
[editable path="Panel/SaveButton"]
[editable path="ControlTemplate/GeneralButton"]
